--- a/src/Application/Application.csproj
+++ b/src/Application/Application.csproj
@@ -21,4 +21,8 @@
     <ProjectReference Include="..\Core\Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Notesheets\Commands\" />
+  </ItemGroup>
+
 </Project>
