--- a/src/WebApp/WebApp.csproj
+++ b/src/WebApp/WebApp.csproj
@@ -6,6 +6,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Include="wwwroot\js\node_modules\chosen-js\chosen.css" />
+    <Content Include="wwwroot\js\node_modules\chosen-js\chosen.min.css" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="wwwroot\js\node_modules\chosen-js\chosen.jquery.js" />
+    <None Include="wwwroot\js\node_modules\chosen-js\chosen.jquery.min.js" />
+    <None Include="wwwroot\js\node_modules\jquery\dist\jquery.js" />
+    <None Include="wwwroot\js\node_modules\jquery\dist\jquery.min.js" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="FluentValidation.AspNetCore" Version="10.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.8" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="5.0.8" />
