--- a/src/WebApp/wwwroot/js/package.json
+++ b/src/WebApp/wwwroot/js/package.json
@@ -9,27 +9,29 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "chosen-js": "^1.8.7",
     "@babel/core": "^7.11.6",
     "@babel/plugin-proposal-class-properties": "^7.10.4",
     "@babel/preset-env": "^7.11.5",
+    "@fortawesome/fontawesome-free": "^5.14.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.1.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-stage-0": "^6.24.1",
-    "@fortawesome/fontawesome-free": "^5.14.0",
     "bootstrap": "^4.5.2",
+    "chosen-js": "^1.8.7",
+    "datatables.net": "^1.11.3",
     "datatables.net-bs4": "^1.10.22",
     "datatables.net-buttons-dt": "^1.6.4",
     "datatables.net-dt": "^1.10.22",
+    "datatables.net-fixedheader": "^3.2.0",
     "jquery": "^3.5.1",
     "jszip": "^3.5.0",
-    "startbootstrap-sb-admin-2": "^4.1.1",
-    "plotly.js-dist": "^1.55.2",
     "pdfmake": "^0.1.68",
+    "plotly.js-dist": "^1.55.2",
     "source-loader": "^1.0.0",
     "source-map-loader": "^1.1.0",
+    "startbootstrap-sb-admin-2": "^4.1.1",
     "ts-loader": "^8.0.3",
     "typescript": "^4.0.2"
   }
